terraform/modules/sg/main.tf
variable "vpc_id" {}


resource "aws_security_group" "alb_sg" {
  name = alb_sg
  vpc_id = var.vpc_id

  ingress{
    description = "Allow HTTP"
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Allow HTTPS"
    from_port = 443
    to_port = 443
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    security_groups = [aws_security_group.ecs_sg.id]
  }
}

resource "aws_security_group" "ecs_sg"{
    name = ecs_sg
    vpc_id = var.vpc_id

    ingress {
        description = "Allow traffic from ALB"
        from_port = 8080
        to_port = 8080
        protocol = "tcp"
        security_groups = [aws_security_group.alb_sg.id]
    }

    egress {
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
}

resource "aws_security_group" "rds_sg" {
  name = rds_sg
  vpc_id = var.vpc_id

  ingress {
    description = "Allows only from ECS"
    from_port = 5432
    to_port = 5432
    protocol = "tcp"
    security_groups = [aws.security_groups.ecs_sg.id]  
  }

  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

output "alb_sg" {
  value = aws_security_group.alb_sg.id
}

output "ecs_sg" {
  value = aws_security_group.ecs_sg.id
}

output "rds_sg"{
    value = aws_security_group.rds_sg.id
}
